stateDiagram-v2
    [*] --> IDLE
    IDLE --> LegacySyncing: setfsmstate legacysyncing
    LegacySyncing --> Running: Initial sync complete
    Running --> Catching_Up: After downtime
    Catching_Up --> Running: Sync complete

    note right of LegacySyncing
        Syncs from traditional BSV node
    end note

    note right of Running
        Can sync from other Teranodes
    end note
